<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView


        android:background="@color/colorBackground"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:gravity="center"
        android:text="@string/name_label"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/nameLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameLine" />


    <EditText
        android:id="@+id/nameLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:inputType="text"
        android:theme="@style/EditTextTheme"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameText"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:drawableEnd="@drawable/man"
            android:drawableRight="@drawable/man" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:drawableRight="@drawable/woman" />
    </RadioGroup>

    <TextView
        android:id="@+id/ageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="@string/age_label"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/ageLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/age"
        android:ems="10"
        android:theme="@style/EditTextTheme"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/ageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ageText"

        app:layout_constraintTop_toTopOf="@id/ageText" />


    <TextView
        android:id="@+id/poidsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="@string/poids_label"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/poidsLine"
        app:layout_constraintStart_toStartOf="@id/nameText"
        app:layout_constraintTop_toTopOf="@id/poidsLine" />


    <EditText
        android:id="@+id/poidsLine"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/poids"
        android:ems="10"
        android:textColor="@color/colorText"
        android:theme="@style/EditTextTheme"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/poidsText"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/weightMetric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/poidsText"
        app:layout_constraintStart_toEndOf="@id/poidsLine"
        app:layout_constraintTop_toTopOf="@id/poidsText"
        tools:text="kg"
        android:textColor="@color/colorText"
        android:text="@string/weight_metric"/>


    <TextView
        android:id="@+id/tailleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/taille_label"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/poidsLine"
        app:layout_constraintStart_toEndOf="@id/poidsLine"
        app:layout_constraintTop_toTopOf="@id/poidsLine" />


    <EditText
        android:id="@+id/tailleLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/taille"
        android:ems="10"
        android:theme="@style/EditTextTheme"
        android:textColor="@color/colorText"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tailleText"
        app:layout_constraintEnd_toStartOf="@id/heightMetric"
        app:layout_constraintStart_toEndOf="@id/tailleText"
        app:layout_constraintTop_toTopOf="@id/poidsText" />


    <TextView
        android:id="@+id/heightMetric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@id/poidsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tailleLine"
        app:layout_constraintTop_toTopOf="@id/poidsText"
        tools:text="cm"
        android:text="@string/height_metric"/>


    <TextView
        android:id="@+id/advertiseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/advertise"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tailleLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>